kubernetes/system/jenkins/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.cluster.afflair.app`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: jenkins
          port: 8080
  tls:
    certResolver: letsencrypt
